phase2_Dev/src/objects/Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_compliant_items__c</fullName>
        <description>Provide the number of inspection items that are compliant</description>
        <label>Number of Compliant Items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Compliant</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_days_to_receive_response__c</fullName>
        <description>Number of days to receive response</description>
        <inlineHelpText>Number of days given to the provider to receive corrective actions plan.</inlineHelpText>
        <label>Number of Days to Receive Corr. Actions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_items_to_assess__c</fullName>
        <description>Provide the number of items that has not been reviewed yet</description>
        <label>Number of Items to Assess</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection_Item__c.Non_Assessed_Item__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_applicable_items__c</fullName>
        <description>Provide the number of non applicable inspection items</description>
        <label>Number of Non-Applicable items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Not Applicable</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_assessed_items__c</fullName>
        <description>Provide the number of non-assessed items from a visit</description>
        <label>Number of Non-Assessed items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Non_Assessed_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_com_items_to_review_on_por__c</fullName>
        <label>Number of non-com items to review on por</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Non-Compliant</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inspection_Item__c.To_Review_on_Portal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_compliant_items__c</fullName>
        <description>Provide the number of non-compliant items from an inspection</description>
        <label>Number of Non-Compliant items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Inspection_Result__c</field>
            <operation>equals</operation>
            <value>Non-Compliant</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_visit_items__c</fullName>
        <description>Provide the total number of visit items</description>
        <label>Number of Visit Items</label>
        <summaryFilterItems>
            <field>Inspection_Item__c.Non_Assessed_Item__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Inspection_Item__c.Inspection_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offline_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag checked when the visit has been downloaded to be used on the offline app. Edits to such visit are not authorized</inlineHelpText>
        <label>Offline Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Visit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Provider of the associated visit must be the provider of the visit</errorMessage>
            <filterItems>
                <field>$Source.Provider_No__c</field>
                <operation>equals</operation>
                <valueField>Inspection__c.Provider_No__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Associated Visits (Follow-Ups)</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Provider_No__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Served__c</fullName>
        <label>Population Served</label>
        <picklist>
            <picklistValues>
                <fullName>Autistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduct Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotionally Disturbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiply Handicapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parenting Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire setting behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abuse reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBTQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medically Complex</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Visit_Tool_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Previous visit tool that was selected by the user</description>
        <inlineHelpText>This is the previously selected Visit Tool</inlineHelpText>
        <label>Previous Visit Tool Used</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Visits (Previous Visit Tool Used)</relationshipLabel>
        <relationshipName>Visits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Director_Licensee__c</fullName>
        <formula>Provider_No__r.Most_Recent_Program_Director_Licensee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Director / Licensee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderId__c</fullName>
        <formula>Provider_No__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProviderId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address_City__c</fullName>
        <formula>Provider_No__r.Provider_Address_1__c &amp; &quot;,&quot; &amp; Provider_No__r.Provider_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Address, City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address__c</fullName>
        <formula>Provider_No__r.Provider_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Provider_No__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_No__c</fullName>
        <description>Provider.Provider No links the parent Provider (Account) record to the child Inspection record</description>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family Child Care, Adoption Agency, Foster Care Agency, Group Care, Large Group, Small Group, Temporary Shelter, Unlicensed Provider</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>FCC Assistant</value>
            </filterItems>
            <filterItems>
                <field>Account.Allow_New_Application_as_Provider__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider_Owner__c</fullName>
        <formula>Provider_No__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Status__c</fullName>
        <formula>TEXT(Provider_No__r.Provider_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <formula>Provider_No__r.RecordType.Name</formula>
        <label>Provider Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_P_Facility_Trans_Checklist_W__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D210000000Nyc&quot; , 

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wIJ&quot;, &quot;Facility and Transportation Checklist (Word)&quot;) 

, 


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000gSgt&quot;, &quot;Facility and Transportation Checklist (Word)&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Word version of Residential Licensing Facility Transportation Tool</inlineHelpText>
        <label>R&amp;P - Facility &amp; Trans Checklist (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_P_Personnel_Checklist__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D210000000Nyc&quot; , 

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wI4&quot;, &quot;Personnel Checklist (Word)&quot;) 

, 


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000gSgo&quot;, &quot;Personnel Checklist (Word)&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open the Word version of the Personnel Tool (Personnel files for Residential Care and Placement Programs)</inlineHelpText>
        <label>R&amp;P - Personnel Checklist (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_P_Residents_Record_Checklist_W__c</fullName>
        <formula>IF( $Organization.Id = &quot;00D210000000Nyc&quot; , 

HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015j00000016wIE&quot;, &quot;Residents record checklist (Word)&quot;) 

, 


HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01511000000gSgy&quot;, &quot;Residents record checklist (Word)&quot;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Word version of Residents record tool</inlineHelpText>
        <label>R&amp;P - Residents Record Checklist (W)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Visit toll that was recommended for this visit</inlineHelpText>
        <label>Recommended Tool</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Visits (Recommended Tool)</relationshipLabel>
        <relationshipName>Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Provider_No__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_an_Investigation__c</fullName>
        <description>If the Visit is related to an Investigation evaluates to TRUE else FALSE</description>
        <formula>IF(NOT( ISNULL( Investigation__c )), TRUE, FALSE)</formula>
        <inlineHelpText>If the Visit is related to an Investigation evaluates to TRUE else FALSE</inlineHelpText>
        <label>Related to an Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks_and_Notes__c</fullName>
        <label>Remarks and Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Res_Licensing_Facility_Transp_DcSign__c</fullName>
        <formula>HYPERLINK( $Setup.EEC_Config__c.DocuSign_Url__c &amp; &quot;/Member/PowerFormSigning.aspx?PowerFormId=&quot; &amp; $Setup.EEC_Config__c.DS_PowerForm_RandPFacilityandTransCheckl__c &amp; &quot;&amp;Provider=&quot; &amp;  Provider_No__r.Name &amp; &quot;&amp;Reviewer_Email=&quot; &amp; Assigned_To_Email__c &amp; &quot;&amp;Reviewer_UserName=&quot; &amp;  Inspector_del__r.FirstName &amp; &quot; &quot; &amp;  Inspector_del__r.LastName  &amp; &quot;&amp;EnvelopeField_SalesforceRecordID=&quot; &amp;  Id &amp; &quot;&amp;EnvelopeField_DocType=Residential%20Licensing%20Facility%20Transportation%20Checklist&quot; , &quot;Facility and Transportation Checklist (DocuSign)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open DocuSign version of Residential Licensing Facility Transportation Tool</inlineHelpText>
        <label>R&amp;P - Facility &amp; Trans Checklist (D)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_date__c</fullName>
        <description>Date the report was sent to the provider</description>
        <inlineHelpText>Date the report was sent to the provider.</inlineHelpText>
        <label>Sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specific_Visit_Requirements__c</fullName>
        <inlineHelpText>Enter here the specific requirements for this visit (ex: for transportation inspection, visit must be arranged when vans are idle and accessible)</inlineHelpText>
        <label>Specific Visit Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>&quot;MA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_of_non_compliance__c</fullName>
        <inlineHelpText>Date the statement of non-compliance was last generated</inlineHelpText>
        <label>Statement of non-compliance Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Provide the different stage of an inspection</description>
        <label>Visit Status</label>
        <picklist>
            <picklistValues>
                <fullName>To be scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report to be sent to Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Sent to Provider, Awaiting feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback received, to review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Switch_Tool_Justification_1__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>This field contains a written explanation for switching the recommended Visit Tool for the first time</inlineHelpText>
        <label>1st Switch Tool Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Switch_Tool_Justification_2__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <inlineHelpText>This field contains a written explanation for switching the recommended Visit Tool for the second time</inlineHelpText>
        <label>2nd Switch Tool Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Assist_Recommendations_Comments__c</fullName>
        <description>Describe the additional technical assistance that was provided during the visit.</description>
        <inlineHelpText>Describe the technical assistance that was provided or need to be provided in addition to the one already captured in the visit items. This will appear in the visit narrative.</inlineHelpText>
        <label>Technical Assistance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_of_visit__c</fullName>
        <label>Time of visit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Capacity__c</fullName>
        <formula>Provider_No__r.Total_License_Capacity__c</formula>
        <label>Total Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Non_Assessed_Items__c</fullName>
        <formula>Number_of_non_assessed_items__c +  Number_of_Items_Abandoned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of visit items included in the visit tool that were set as &apos;non-assessed&apos; directly in the tool or were the result of an abandoned tool during the visit.</inlineHelpText>
        <label>Number of Non Assessed Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Staff__c</fullName>
        <formula>Provider_No__r.Total_Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Staff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Visit__c</fullName>
        <description>Reason of Visit</description>
        <label>Reason of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Licensing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License 90-day Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Activate Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy System Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Umbrella_Name__c</fullName>
        <description>Umbrella name used in the filter rule in the visit master / slave relationship</description>
        <formula>Provider_No__r.Umbrella_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umbrella Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updates_Changes__c</fullName>
        <description>Describe the updates and changes required. This will appear in the narrative</description>
        <inlineHelpText>Describe the updates and changes required. This will appear in the visit narrative</inlineHelpText>
        <label>Updates and Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Use_Non_Recommended_Tool_Justification__c</fullName>
        <inlineHelpText>Justification provided by the licensor to use another visit tool than the visit tool proposed by the system. If empty, it means that the tool used was the one proposed by the system</inlineHelpText>
        <label>Use Non Recommended Tool Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Address_Full_Email__c</fullName>
        <description>Consolidated Visit Address to consolidate for there being no Address 2 and other blank spaces</description>
        <formula>Address_1__c &amp; &quot;, &quot; &amp; IF( OR(ISNULL(Address_2__c),ISBLANK(Address_2__c)),&quot;&quot;, Address_2__c&amp;&quot;, &quot;) &amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; &quot; &quot; &amp; Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Address Full Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Created_By_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to identify if the visit has been created by the batch which create visits automatically for visits not associated to a licensing transaction.</description>
        <label>Visit Created By Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Length_Method_1__c</fullName>
        <formula>ROUND((Max_Assessed_Date__c -  Min_Assessed_Date__c ) * 1440,0)</formula>
        <inlineHelpText>Duration in minutes of the visit calculated between the first visit item assessed and the last visit item assessed.</inlineHelpText>
        <label>Visit Length - Method 1 (in min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Length_Method_1_del__c</fullName>
        <formula>ROUND((Max_Assessed_Date__c -  Min_Assessed_Date__c ) * 1440,0)</formula>
        <inlineHelpText>Duration in minutes of the visit calculated between the first visit item assessed and the last visit item assessed.</inlineHelpText>
        <label>Visit Length - Method 1 (in min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Length_Method_2__c</fullName>
        <formula>ROUND(( End_Time__c -  Start_Time__c ) * 1440,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in minutes of the visit calculated using the &quot;Start timer&quot; and &quot;End timer&quot; buttons found in visit mode</inlineHelpText>
        <label>Visit Length - Method 2 (in min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Mode_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag checked when the visit mode is accessed by a user and remains locked for other users until its released or unlocked by the user.</description>
        <inlineHelpText>This flag checked when the visit mode is accessed by a user and remains locked for other users until its released or unlocked by the user.</inlineHelpText>
        <label>Visit Mode Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Mode_Locked_By__c</fullName>
        <description>Name of the user who locked the visit if it is locked.</description>
        <label>Visit Mode Locked By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Mode_Locked_Date__c</fullName>
        <description>Date when the Visit Mode was locked</description>
        <formula>If(Visit_Mode_Lock__c == true,TODAY(),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Mode Locked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Narrative_Issue_Date__c</fullName>
        <inlineHelpText>Date the Visit Narrative was last issued</inlineHelpText>
        <label>Visit Narrative Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Tool_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Visit tool that is used for this visit</inlineHelpText>
        <label>Current Visit Tool Used</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Window_Opening_Date__c</fullName>
        <description>Date when a differential licensing visit window starts. Visit must be scheduled after this date.</description>
        <formula>IF( (CONTAINS(TEXT(Type_of_Visit__c), &quot;Monitoring&quot;) || CONTAINS(TEXT(Type_of_Visit__c), &quot;Progress&quot;) || CONTAINS(TEXT(Type_of_Visit__c), &quot;Renewal&quot;)) &amp;&amp; NOT(CONTAINS(TEXT(Type_of_Visit__c), &quot;90-day&quot;)), Estimated_Deadline__c - 120, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when a differential licensing visit window starts. Visit must be scheduled after this date.</inlineHelpText>
        <label>Window Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>At creation and if left blank, Zip Code will be populated with Provider zip code after saving</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Unchecked if no coordinates found using geocoding API</description>
        <label>validAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>visitLatitude__c</fullName>
        <description>Latitude part of geo-coordinates of the visit address</description>
        <label>visitLatitude</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visitLongitude__c</fullName>
        <description>Longitude part of geo-coordinates of the visit address</description>
        <label>visitLongitude</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type_of_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>Inspector_del__c</columns>
        <columns>Number_of_visit_items__c</columns>
        <columns>Number_of_non_compliant_items__c</columns>
        <columns>Visit_Created_By_Batch__c</columns>
        <columns>Count_Visit_For_Visit_Creation_Batch__c</columns>
        <columns>Offline_Lock__c</columns>
        <filterScope>Everything</filterScope>
        <label>Visits - All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type_of_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>Number_of_non_compliant_items__c</columns>
        <columns>Inspector_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Closed / Cancelled</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_or_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Provider_No__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type_of_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>Number_of_non_compliant_items__c</columns>
        <columns>Inspector_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Visits - Closed or Cancelled</label>
    </listViews>
</CustomObject>